# baroque

./: .gitignore  CLAUDE.md  README.md  base.py  config.py  dataimport.py  image.py  latex.py  main.py  metaprompts.md  pdf.py  process.py  pyproject.toml
raw-output/ADM 1.3957/: english_page_001.txt  english_page_002.txt  english_page_003.txt  english_page_006.txt  english_page_007.txt  english_page_008.txt  english_page_010.txt  english_page_011.txt  english_page_012.txt  english_page_013.txt  english_page_014.txt  english_page_015.txt  english_page_016.txt  english_page_017.txt  english_page_018.txt  english_page_019.txt  english_page_020.txt  english_page_021.txt  english_page_022.txt  english_page_023.txt  english_page_024.txt  english_page_025.txt  english_page_026.txt  english_page_027.txt  english_page_028.txt  english_page_029.txt  english_page_030.txt  english_page_031.txt  english_page_032.txt  english_page_033.txt  english_page_034.txt  english_page_035.txt  english_page_036.txt  english_page_037.txt  english_page_038.txt  english_page_039.txt  english_page_040.txt  english_page_041.txt  english_page_042.txt  english_page_043.txt  (+1132 more)
raw-output/ADM 1.3958/: english_page_001.txt  english_page_004.txt  english_page_005.txt  english_page_006.txt  english_page_007.txt  english_page_008.txt  english_page_009.txt  english_page_010.txt  english_page_011.txt  english_page_012.txt  english_page_013.txt  english_page_014.txt  english_page_015.txt  english_page_016.txt  english_page_017.txt  english_page_018.txt  english_page_019.txt  english_page_020.txt  (+368 more)
(+6642 files in other folders)
